examples/typeError/typeErrorInTermFun2.lcp
Nat = Data(X)< Zero () | Succ X >
NatList = Record(X){ .head : Nat | .tail : X }

f : Nat -> Nat
f x = f (f x) x
